# Engram

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STUDY_READY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json  settings.json  settings.local.json
.claude/hooks/: end-of-turn.sh
.claude/workflows/: ingest-library.mjs
.github/workflows/: release.yml
docs/: IMPROVEMENTS.md  MANUAL-CHECKLIST.md  PIPELINE-SCHEMA.md  PRD.md  SPEC.md  TODO.md  TODO_Archive.md
public/: symbols.json
scripts/: build-symbol-index.mjs  bump-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: providers.tsx
src/lib/: constants.ts  debounce.ts  image-cache.ts  keybindings.ts  medicine-videos.ts
tools/video-ingest/: README.md  batch_extract.py  batch_extract_test.py  captions.py  captions_test.py  codex_ingest_batch.py  codex_ingest_batch_test.py  codex_worker_final_schema.json  collect_bundles.py  collect_bundles_test.py  emit_rebuild_list.py  glossary.json  ingest_queue.json  ingest_queue.py  ingest_video.py  ingest_video_test.py  ingest_workflow.py  ingest_workflow_test.py  intro_frames.py  intro_frames_test.py  lint_draft.py  lint_draft_test.py  lint_strict_coverage_test.py  mvs_transcript.py  overnight_ingest_runner.py  overnight_ingest_runner_test.py  pre_extract_pending.py  pre_extract_pending_test.py  requirements-sam.txt  (+6 more)
(+264 files in other folders)
