[package]
name = "engram"
version = "0.1.1"
description = "Engram — local mnemonic scene editor"
authors = ["Dogebooch"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "engram_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
